upload swagger,add daisyui, base layout
